<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_pulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_pulse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_pulse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_pulse">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_pulse"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"></com.github.mikephil.charting.charts.LineChart>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_accelerometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_accelerometer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_pulse" />

        <LinearLayout
            android:id="@+id/layout_accelerometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_accelerometer">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_accelerometer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"></com.github.mikephil.charting.charts.LineChart>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_accelerometer" />

        <LinearLayout
            android:id="@+id/layout_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_temperature"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"></com.github.mikephil.charting.charts.LineChart>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>